--- a/src/SiteSearch.Test/SiteSearch.Test.csproj
+++ b/src/SiteSearch.Test/SiteSearch.Test.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\SiteSearch.Middleware\SiteSearch.Middleware.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.7" />
+  </ItemGroup>
+
 </Project>
