--- a/src/SiteSearch.Core/SiteSearch.Core.csproj
+++ b/src/SiteSearch.Core/SiteSearch.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="3.1.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
