--- a/src/SiteSearch.Test/SiteSearch.Test.csproj
+++ b/src/SiteSearch.Test/SiteSearch.Test.csproj
@@ -1,8 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="search-index\**" />
+    <Content Remove="search-index\**" />
+    <EmbeddedResource Remove="search-index\**" />
+    <None Remove="search-index\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SiteSearch.Core\SiteSearch.Core.csproj" />
@@ -11,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.8" />
   </ItemGroup>
 
 </Project>
