--- a/src/SiteSearch.Core.nuspec
+++ b/src/SiteSearch.Core.nuspec
@@ -5,11 +5,11 @@
     <title xmlns="">SiteSearch.Core</title>
     <authors>Allan Eagle</authors>
     <owners>Allan Eagle</owners>
-    <projectUrl>https://github.com/aeagle/blazor-spaces</projectUrl>
+    <projectUrl>https://github.com/aeagle/site-search.net</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Full text search engine abstraction and AspNetCore middleware allowing search interfaces to be built easily</description>
     <tags>Full-text Search Lucene Faceting Paging Sorting</tags>
-    <version>0.0.1-beta.2</version>
+    <version>0.0.1-beta.3</version>
     <dependencies>
 		<group targetFramework="netstandard2.0">
 			<dependency id="Microsoft.Extensions.Primitives" version="6.0.0" />
